Fix header text overflow

--- a/src/co/common/button/index.module.styl
+++ b/src/co/common/button/index.module.styl
@@ -16,6 +16,7 @@
     white-space: nowrap
     outline: none
     line-height: 2
+    flex-shrink: 0
     transition: box-shadow 0.1s ease-in-out, background 0.1s ease-in-out
 
     > * {
