--- a/src/co/common/header/index.module.styl
+++ b/src/co/common/header/index.module.styl
@@ -33,9 +33,6 @@
 }
 
 .title {
-    display: flex
-    align-items: center
-    
     min-width: 0
     font-size: var(--head-font-size)
     font-weight: 500
@@ -44,11 +41,6 @@
     overflow: hidden
     text-overflow: ellipsis
     word-wrap: break-word
-
-    &[data-center] {
-        flex: 1
-        text-align: center
-    }
 }
 
 .space {
